# comic2anim

./: .gitignore  README.md  papers.txt  pyproject.toml
dataset/: dataset_prep.csv  dataset_prep.py  move.py  scrape.py
dataset/utils/: dataset_prep.py  move.py  scrape.py  scrape_old.py
model/: LDM.ipynb
