[tool.poetry]
name = "comic2video"
version = "0.1.0"
description = ""
authors = ["Rushab11 <humagainrushab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
tenacity = "^8.2.3"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
